# cdraw

./: CMakeLists.txt  main.cpp
icons/: icons.qrc
qml/: MainWindow.qml  Ribbon.qml  RibbonGroup.qml  RibbonGroupButton.qml  Style.qml  qml.qrc  qmldir
